--- a/EuroSys2022/ref.bib
+++ b/EuroSys2022/ref.bib
@@ -56,7 +56,7 @@ series = {SOSP '89}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/cgo/ZengR0AJ014,
+@inproceedings{ZengR0AJ014,
   author    = {Qiang Zeng and
                Junghwan Rhee and
                Hui Zhang and
@@ -74,7 +74,7 @@ series = {SOSP '89}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{DBLP:conf/icse/SumnerZWZ10,
+@inproceedings{SumnerZWZ10,
   author    = {William N. Sumner and
                Yunhui Zheng and
                Dasarath Weeratunge and
@@ -111,7 +111,7 @@ series = {SOSP '89}
 }
 
 
-@inproceedings{Blagodurov:2011:CNC:2002181.2002182,
+@inproceedings{Blagodurov,
  author = {Blagodurov, Sergey and Zhuravlev, Sergey and Dashti, Mohammad and Fedorova, Alexandra},
  title = {A Case for NUMA-aware Contention Management on Multicore Systems},
  booktitle = {Proceedings of the 2011 USENIX Conference on USENIX Annual Technical Conference},
@@ -167,7 +167,7 @@ series = {SOSP '89}
   year={2013}
 }
 
-@inproceedings{Lepers:2015:TMP:2813767.2813788,
+@inproceedings{Lepers,
  author = {Lepers, Baptiste and Qu{\'e}ma, Vivien and Fedorova, Alexandra},
  title = {Thread and Memory Placement on NUMA Systems: Asymmetry Matters},
  booktitle = {Proceedings of the 2015 USENIX Conference on Usenix Annual Technical Conference},
@@ -1149,7 +1149,7 @@ howpublished={\url{www.youthcodejam.org/}},
  keywords = {NUMA, memory mapped IO, multi-socket CPUs},
 } 
 
-@inproceedings{Ogasawara:2009:NMM:1640089.1640117,
+@inproceedings{Ogasawara,
  author = {Ogasawara, Takeshi},
  title = {NUMA-aware Memory Manager with Dominant-thread-based Copying GC},
  booktitle = {Proceedings of the 24th ACM SIGPLAN Conference on Object Oriented Programming Systems Languages and Applications},
