--- a/SC2022/discussion.tex
+++ b/SC2022/discussion.tex
@@ -1,11 +1,13 @@
 \section{Limitation}
 \label{sec:limit}
 
-This section describes some limitations of \NM{}. First, \NM{} may consume more memory than some popular allocators, especially when transparent huge pages are enabled. \NM{} currently allocates a big chunk (larger than a huge page) from the OS, then the OS will satisfy the memory allocations with huge pages when transparent huge pages are enabled. Although this method reduces the possible system call overhead and enjoys the performance benefits caused by reducing TLB misses, it does introduce more memory consumption. That is, the whole huge page will be wasted even if applications only use a small portion in such as huge pages. However, we believe that this shortcoming is tolerable, when memory is not the major concern. 
+This section describes some limitations of \NM{}. First, \NM{} may consume more memory than some popular allocators, especially when transparent huge pages are enabled. \NM{} currently allocates a big chunk (larger than a huge page) from the OS, then the OS will satisfy the memory allocations with huge pages when transparent huge pages are enabled. Although this method reduces the possible system call overhead and enjoys the performance benefits caused by reducing TLB misses, it does introduce more memory consumption. That is, the whole huge page will be wasted even if applications only use a small portion of huge pages. However, we believe that this shortcoming is tolerable, when memory is not the major concern. 
 %As shown in Figure~\ref{fig:remoteAccess}, \NM{} significantly reduces the number of TLB misses by trading with medium memory consumption. 
 
 
-Second, \NM{}'s interleaved heap cannot always achieve the performance improvement due to the following reasons: (1) although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. (2) Although \NM{} avoids the change of programs to utilize the interleaved heap, it imposes additional overhead to identify the callsites for potentially shared objects. Therefore, users should decide whether to enable the interleaved heap or not. However, this is an easy task, since the interleaved heap may have a harmful impact when the serial phase is a big portion of the execution. Therefore, we think that this shortcoming is totally acceptable given its predictability. 
+Second, \NM{}'s interleaved heap cannot always achieve the performance improvement due to the following reason. Although the interleaved heap may avoid memory controller congestion caused by concurrent accesses from multiple child threads, it introduces unnecessary overhead for the initial thread since it is forced to have some remote accesses. 
+%(2) Although \NM{} avoids the change of programs to utilize the interleaved heap, it imposes additional overhead to identify the callsites for potentially shared objects. 
+Therefore, users should decide whether to enable the interleaved heap or not. However, this is an easy task, since the interleaved heap may have a harmful impact when the serial phase is a big portion of the execution. Therefore, we think that this shortcoming is totally acceptable given its predictability. 
 
 \NM{} is built based on the thread binding, where people may worry about its conflict with the OS scheduler. In fact, based on our understanding, this should not be a big issue due to the following reasons. First, \NM{}'s thread binding does not exclude OS's scheduling, as it only binds a thread to a node. Second, \NM{} allows users to adjust the binding flexibly, although currently \NM{} only supports node-interleaved and node-saturate binding. But adding more flexible binding will be just pure engineering effort. Third, the thread binding is even suitable for server applications with thousands of threads, as \NM{}'s binding balances the workload among different physical nodes. 
 %Based on our analysis, the memory consumption is caused by \NM{}'s bag mechanism, especially with transparent huge page support. Currently, \NM{} employs one MB as a bag, which indicates that objects of each size will occupy at least of 1 MB, when transparent huge page support is enabled. Further, \NM{}'s design achieves a fast lookup on the metadata, but will utilize more memory unfortunately. We will investigate whether reducing the size of a bag could help reduce the memory consumption in the future.
