--- a/SC2022/implementation.tex
+++ b/SC2022/implementation.tex
@@ -12,54 +12,44 @@
 %\includegraphics{figure/overview2}
 \end{center}
 %\vspace{-0.1in}
-\caption{Overview of \NA{}'s Heap Layout.
+\caption{Overview of \NA{}'s heap layout.
 \label{fig:overview}}
 %\vspace{-0.1in}
 \end{figure}
 
 % \todo{We should balance what to talk about in the overview, it's a little bit long and something has repeatedly described in the following}
 
-As discussed in Section~\ref{sec:intro}, \NM{} designs a origin-computable mechanism that could quickly check the origin of every object upon deallocation. In order to support this, \NM{}'s heap layout is designed as  Fig.~\ref{fig:overview}. Initially, \NM{} requests a large and continuous block of memory from the underlying OS, and then divides it evenly into multiple regions based on the number of hardware nodes. Each region is bound to a different physical node via \texttt{mbind} system call. In particular, the first region is bound to the first node, the second one is bound to the second node, and so on. This design enables us to compute the physical node quickly from a memory address: we could compute the index of the physical node by dividing the heap offset by the region size. 
+%As discussed in Section~\ref{sec:intro}, \NM{} designs a origin-computable mechanism that could quickly check the origin of every object upon deallocation. In order to support this, 
+\NM{}'s heap layout is designed as  Fig.~\ref{fig:overview}. Initially, \NM{} requests a large and continuous block of memory from the underlying OS, and then divides it evenly into multiple regions based on the number of hardware nodes. Each region is bound to a different physical node via \texttt{mbind} system call. 
+%\NM{} can support the customized binding from users. If not, it typically  
+In particular, the first region is bound to the first node, the second one is bound to the second node, and so on. This design enables us to compute the physical node quickly from a memory address: we could compute the index of the physical node by dividing the heap offset by the region size. 
 %This layout is different from existing allocators, based on our knowledge. 
 % \todo{Numalloc's reviewer said TCMalloc also use the same mechanism. I check the code and it's true that TCMalloc use the memory tag for numa partition id}
 
 %\NM{} borrows some of these existing mechanisms. First, it uses different mechanisms to manage small and big objects. Second, small objects are also managed by size classes using the BiBOP-style. Third, similar to existing work, such as Linux and TCMalloc~\cite{tcmalloc}, \NA{} utilizes different freelists to track freed objects, and uses the first word of freed objects to link different objects. But the difference of \NM{} is further described in Section~\ref{sec:implement}.
 
-From Fig.~\ref{fig:overview}, we see that each node's memory region will be further divided into two sub-regions, one for small objects, and the other one for big objects. The \texttt{bpSmall} pointer is utilized to track never-allocated memory for small objects, and big ones are tracked with \texttt{bpBig} pointer. Similar to existing allocators, \NM{} manages small and big objects differently. In \NM{}'s design, small objects are those with a size less than 512K, which are organized by size classes and each request will be satisfied from a particular size class. \NA{} utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterward. For small objects, \NM{} utilizes the well-known ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (32 KB by default) will have the same size class. Big object allocation will be satisfied in a sequential manner and their sizes are aligned to the one bag size (32 KB).
+From Fig.~\ref{fig:overview}, we see that each node's memory region will be further divided into two sub-regions, one for small objects, and the other one for big objects. The \texttt{bpSmall} pointer is utilized to track never-allocated memory for small objects, and big ones are tracked with \texttt{bpBig} pointer. Similar to existing allocators, \NM{} manages small and big objects differently. In \NM{}'s design, small objects are those with a size less than 512K, which are organized by size classes and each request will be satisfied from a particular size class. \NA{} utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterward. For small objects, \NM{} utilizes the well-known ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) style that all objects in the same bag (32 KB by default) will have the same size class. 
+Big object allocation will be satisfied in a sequential manner and their sizes are aligned to the size of one bag (32 KB).
 
 To support the NUMA architecture, a per-node heap (PerNodeHeap in Fig.~\ref{fig:overview}) is proposed that has one freelist for each size class and one common freelist for all big objects from the current node. 
 %We will talk about the relationship between per-thread freelist and per-node freelist in Section~\ref{sec:origin}. 
 %For small objects, freed objects of the same size class will be tracked with a freelist.
-In order to reduce the contention, \NM{} adopts a per-thread heap (PerThreadHeap in Fig.~\ref{fig:overview}) that maintains a freelist for each size class, which requires no protection since each thread has its own per-thread heap. However, this may introduce memory blowup~\cite{Hoard} that freed objects of a per-thread heap cannot be utilized for future allocations from other threads, which will be addressed in Section~\ref{sec:others}. 
+In order to reduce the contention, \NM{} adopts a per-thread heap (PerThreadHeap in Fig.~\ref{fig:overview}) that maintains a freelist for each size class, which requires no lock protection since each thread has its own per-thread heap. However, this may introduce memory blowup~\cite{Hoard} that freed objects of a per-thread heap cannot be utilized for future allocations from other threads, which will be addressed in Section~\ref{sec:others}. 
 \NM{} tracks the small objects' size information in a separate area called PerBagSizeInfo, while the big objects utilize a linked list called PerBigObjectSizeInfo to store the size and availability information, which allows coalescing multiple continuous big objects into a bigger object upon deallocations.
 
 % \NM{} tracks the size information and availability information in a separate area:  ``PerBagSizeInfo'' of Figure~\ref{fig:overview} is used for tracking the size of each size class for small objects.
 
 %(shown as ``PerMBInfo'' of Figure~\ref{fig:overview}): it tracks the size of each size class for small objects, and the size of the big object (aligned to 1 MB) for big objects. This data structure also includes the used/free information for big objects, which allows coalescing multiple continuous big objects into a bigger object upon deallocations. To save space, \NM{} utilizes the lowest significant bit of ``PerMBInfo'' to encode the availability information.
 
-Overall, \NM{} includes a novel layout to quickly compute the physical node (with the memory binding) and a per-node heap to support node-aware allocations. This design allows it to perform origin-based memory management efficiently, as discussed in the next section. 
+Overall, \NM{} includes a layout to quickly compute the physical node (with the memory binding) and a per-node heap to support node-aware allocations. This design allows it to perform origin-aware memory management efficiently, as discussed in the next section. 
 
 %mechanisms to re and one per-node freelist for each node to track big objects. \NM{} also maintains per-node freelists to track small objects based on size classes. These freelists are singly linked lists, which uses the first word of every freed object as pointers.  Small freed objects may be migrated between per-thread freelists and per-node freelists, as further described in Section~\ref{sec: others}. 
 \subsection{Binding-Based Memory Management} 
 \label{sec:balance}
-As described in Section~\ref{sec:intro}, thread migration will cause multiple performance issues for the NUMA architecture. Therefore, \NM{} binds each thread to a node specifically in order to avoid thread migration across different nodes. To improve the balance, \NM{} currently supports two types of binding, \textbf{node-interleaved binding} and \textbf{node-saturate binding}. Node-interleaved binding binds continuous threads to different nodes in an interleaved way so that every node will have a similar number of threads. That is, the first thread will be bound to the node that it is scheduled to run by the OS, and the second thread will be bound to its next node, and so on. Instead, the node-saturate binding will bind sufficient threads to a node first before binding to a different node. For node-saturate binding, threads to be assigned will be the same as the number of hardware cores.  
+As described in Section~\ref{sec:intro}, thread migration will cause multiple performance issues for the NUMA architecture. Therefore, \NM{} binds each thread to a node specifically in order to avoid thread migration across different nodes. Currently \NM{} currently supports two types of binding, \textbf{node-interleaved binding} and \textbf{node-saturate binding}, where users could provide their customized binding as well. Node-interleaved binding binds continuous threads to different nodes in an interleaved way so that every node will have a similar number of threads. That is, the first thread will be bound to the node that it is scheduled to run by the OS, and the second thread will be bound to its next node, and so on. Instead, the node-saturate binding will bind sufficient threads to a node first before binding to a different node. For node-saturate binding, threads to be assigned will be the same as the number of hardware cores.  
 
 Note that \NM{} only binds a thread to a node, instead of a core, which still allows the scheduling initiated by the OS. To perform the binding correctly, \NM{} obtains the hardware topology in the initialization phase via the \texttt{numa\_node\_to\_cpus} API, which tells the relationship between each CPU core and each memory node. Then it intercepts all thread creations in order to bind a newly-created thread to a specific node.
 %In the future, we plan to support more user-controlled binding. 
-
-\subsection{Origin-Aware Memory Management} 
-\label{sec:origin}
-
-%\todo{In Section III-B, you talk about satisfying allocations from the "un-allocated region" as the last step. Is this memory that is not part of the interleaved heap? It would help to be more clear about what this is. }
-
-As described in Section~\ref{sec:overview}, \NM{} includes an origin-computable design that could quickly determine the origin of each object via the computation. On top of it, we further discuss other aspects of \NM{}'s origin-based memory management as follows.  
-
-First, it includes an origin-based deallocation that will always return a freed object to a freelist with the same origin. In particular, if a freed object is originated from a different node, it is returned to its original node's  freelist. Otherwise, a small object is returned back to the thread's freelist and a big object is returned back to the current node's freelist. Comparing to node-based freelist, there is no need to acquire a lock when operating on the per-thread freelist. Different from all existing work, \NM{} may return a freed object into the per-thread list or its original node's freelist, instead of simply putting into the per-thread list. That is, \NM{} considers the originality of objects for deallocations. \todo{needs improve the words}
-
-Second, \NM{} always ensures node-local memory allocations. For small objects, it follows this order: (1) the per-thread's freelist will be checked first, since there is no need to acquire any lock and objects may be still hit in the cache (as they are just accessed by the thread); (2) If the per-thread freelist does not have available objects, \NM{} tries to allocate from the current node's freelist; As mentioned above, a node's freelist holds objects originated from this node. (3) If the last two steps fail,  we will allocate the memory from the current node's un-allocated region, as shown by bpSmall in Figure~\ref{fig:overview}. In this way, 
-%Since the region is bound to the current node, and objects in the per-thread freelist and the per-node freelist are always originated from the current node, 
-\NM{} ensures local allocations for small objects. For big objects, allocation will be satisfied from per-node freelists or un-allocated region (pointed by bpBig pointer in Figure~\ref{fig:overview}) of the current node, indicating local allocations for big objects. 
-
 
 %\subsection{Selective Huge Pages} 
 %\label{sec:hugepage}
@@ -75,76 +65,62 @@ Second, \NM{} always ensures node-local memory allocations. For small objects, i
 %Each per-node heap is further divided into two parts as illustrated in Figure~\ref{fig:overview}: small objects will be allocated from the first half and will be allocated using small pages, while big objects will be allocated from the second half with huge pages (2MB). When a big object (with the huge page) is utilized for small objects, only frequently-allocated small objects can utilize such an object. We believe that our design balances the performance and memory consumption.   
 
 
-\subsection{Threads-Shared Incremental Allocation} 
-When Transparent Huge Page (THP) is enabled, the OS will prefer to allocate huge pages if a program touches a continuous memory region with the size larger than a huge page (e.g., 2MB). Since \NM{} allocates a large region initially (as shown in Figure~\ref{fig:overview}), huge pages will be employed by the OS correspondingly. However, it is important to reduce memory fragmentation, as one allocation from a memory block will be assigned to a huge page. \NM{} makes multiple threads (from the same node) share the same memory block, instead of having a separate super-block for each thread as Scalloc~\cite{Scalloc}. That is, when a thread is running out of the memory, it obtains only multiple objects at a time (currently 1 page for very small objects) from the corresponding memory block, instead of getting a whole block (few megabytes) for each per-thread heap. To get rid of the unnecessary memory overhead brought by THP, such as ``PerMBInfo'' used internally by \NM{}, we leverage \texttt{madvise} system call to make it allocated from normal pages. \todo{elaborate?} These are the basic reasons that \NM{} has much less memory consumption than Scaller, as evaluated in Section~\ref{sec:memory}. 
+\subsection{Threads-shared Incremental Allocation}
+\label{sec:hugepages}
+When Transparent Huge Page (THP) is enabled, the OS will prefer to allocate huge pages if a program touches a continuous memory region with the size larger than a huge page (e.g., 2MB). Since \NM{} allocates a large region initially (as shown in Fig.~\ref{fig:overview}), huge pages will be employed by the OS correspondingly. However, it is important to reduce memory fragmentation, as one allocation from a memory block will be assigned to a huge page. \NM{} makes multiple threads (from the same node) share the same memory block, instead of having a separate super-block for each thread as Scalloc~\cite{Scalloc}. That is, when a thread is running out of memory, it obtains only multiple objects at a time (currently 32K) from the corresponding memory block, instead of getting few megabytes for each per-thread heap. To get rid of the unnecessary memory overhead on metadata, such as ``PerBagSizeInfo'' used internally by \NM{}, we leverage \texttt{madvise} system call to make it allocated from normal pages. These are the basic reasons that \NM{} has much less memory consumption than Scalloc, as evaluated in Section~\ref{sec:memory}. 
 
 \subsection{Other Mechanisms}
 \label{sec:others}
 
-\NM{} also implements the following mechanisms in order to reduce the performance and memory overhead. 
+\NM{} also implements the following mechanisms in order to improve the performance.
 
-\todo{"Efficient Object Movement" is one of the other mechanisms but it's longer than the major contributions. We need to cut some words}
+\subsubsection{Origin-Aware Memory Management} 
+\label{sec:origin}
+
+%\todo{In Section III-B, you talk about satisfying allocations from the "un-allocated region" as the last step. Is this memory that is not part of the interleaved heap? It would help to be more clear about what this is. }
+
+As described in Section~\ref{sec:overview}, \NM{} includes an origin-computable design that could quickly determine the origin of each object via the computation. 
+%On top of it, we further discuss other aspects of \NM{}'s origin-based memory management as follows.
+On top of it, \NM{} proposes an origin-aware deallocation that will always return a freed object to a freelist with the same origin. In particular, if a freed object is originated from a different node, it is returned to its original node's  freelist. Otherwise, a small object is returned back to the thread's freelist and a big object is returned back to the current node's freelist. Comparing to node-based freelist, there is no need to acquire a lock when operating on the per-thread freelist. Different from all existing work, \NM{} may return a freed object into the per-thread list or its original node's freelist, instead of simply putting into the per-thread list. That is, \NM{} considers the originality of objects for deallocations. 
+
+\NM{} always ensures node-local memory allocations. For small objects, it follows this order: (1) The per-thread's freelist will be checked first, since there is no need to acquire any lock and objects may be still hit in the cache (as they are just accessed by the thread). (2) If the per-thread freelist does not have available objects, \NM{} tries to allocate from the current node's freelist. As mentioned above, a node's freelist holds objects originated from this node. (3) If the previous two steps fail,  we will allocate the memory from the current node's un-allocated region, as shown by \textit{bpSmall} in Fig.~\ref{fig:overview}. 
+%Since the region is bound to the current node, and objects in the per-thread freelist and the per-node freelist are always originated from the current node, 
+%\NM{} ensures local allocations for small objects. 
+For big objects, allocation will be satisfied from per-node freelists or un-allocated region (pointed by bpBig pointer in Fig.~\ref{fig:overview}) of the current node, indicating local allocations for big objects. 
+
+\subsubsection{Interleaved Heap} 
+\NA{} proposes an interleaved heap that is inspired by existing profilers\cite{XuNuma, MemProf}: \textit{many NUMA performances issues are related to shared objects allocated in the main thread}. Due to the default first-touch policy~\cite{lameter2013numa, diener2015locality}, objects allocated and touched by the main thread are typically allocated in the node that the main thread is running on. However, these objects can be passed to multiple child threads and be accessed by these threads concurrently so that this node's memory controller becomes the performance bottleneck. 
+
+To reduce this issue, \NA{} reserves a range of memory for such objects, called ``Interleaved Heap'' as shown in Fig.~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, when these objects are passed to child threads, these threads may access objects that are allocated from multiple nodes, reducing interconnect congestion and load imbalance of a single node. 
+
+As we evaluated in Section~\ref{sec:interleavedheap}, the interleaved heap is beneficial to the performance for some applications. However, it may degrade the performance, especially when an application spends a lot of time in its serial phase. With the default first-touch policy, all accesses in the first serial phase will be local accesses, but the interleaved heap will turn some local accesses to remote ones. Therefore, the interleaved heap is provided as an option that can be enabled whenever necessary. 
+
 
 \subsubsection{Efficient Object Movement} 
+\label{sec:movement}
 %It is important to reduce memory blowup that freed objects by one thread cannot be utilized by other threads~\cite{Hoard}. 
-\NM{} requires to move freed objects between per-thread and per-node freelists frequently. On the one hand, when a per-thread freelist has too many freed objects, some of them should be moved to the per-node freelist so that other threads could re-utilize these freed objects. On the other hand, each per-thread list needs to obtain freed objects from its per-node heap, when a thread is running out of the memory. 
+\NM{} requires to move freed objects between per-thread and per-node freelists frequently. An efficient mechanism is required to support frequent movement. However, existing allocators, such as TCMalloc~\cite{tcmalloc}, traverse the freelist to collect a specified number of objects, and then moves all of them at a time, which unfortunately have the following issues:  traversing a freed object will bring some data to the cache unnecessarily, when these objects are moved to other threads later; it will move recently-freed objects (and hot in cache), which is not good for the performance; the traverse of some shared lists may introduce significant lock contention. 
 
-Therefore, an efficient mechanism is required to support frequent movement. A straightforward method is to traverse the freelist to collect a specified number of objects, and then moves all of them at a time to reduce the synchronization overhead. Both TCMalloc and TCMalloc-NUMA utilize this mechanism, which has the following issues: First, traversing a freed object will actually bring its first lines to the cache, since its first word is used as the pointer for the freelist. This traverse will introduce unnecessary cache misses for the current thread, when these objects are moved to other threads later. 
-%\NM{} utilizes the first word of each freed object as the pointers for the linked list, where traversing these objects will bring these objects to the cache that the current thread do not need. 
-Second, the movement will always move recently-freed objects since they are located in the header of the singly-linked list. However, this is not good for the performance since these recently-freed objects can be still hot in the cache. 
-%when moving objects from a per-thread freelist to the per-node freelist, since recently-freed objects can be still hot in the cache. 
-%Then a thread will be forced to utilize objects that are not in the cache. 
-Third, the traverse of a global freelist may introduce significant lock contention, when multiple threads are moving freed objects from the per-node freelist concurrently. 
-%In our Some applications (e.g.,  have been observed a 20\% slowdown due to this straightforward mechanism. %\todo{someone asked where the data come from?} 
- 
-%\todo{On object migration (section III-E): the authors mention that traversing a freelist will bring cache lines to the traversing thread's cache, causing cache misses for other threads (traversing thread’s cache will be changed). Given that these traversals are reads, this statement seems to be incorrect. The cache coherence mechanism will bring the read cache lines in Shared state, hence their copies in other threads' caches won't be invalidated.}
 
 \begin{figure}[!h]
 \centering
 \includegraphics[width=3in]{SC2022/figure/efficient-movement.png}
 %\vspace{-0.1in}
-\caption{Per-thread freelist and per-node freelist design to achieve efficient object movement\label{fig:perthreadlist}}
+\caption{Per-thread freelist and per-node freelist design to achieve efficient object movement.\label{fig:perthreadlist}}
 %\vspace{-0.1in}
 \end{figure}
 
-% \begin{figure}[!h]
-% \centering
-% \includegraphics[width=3in]{figure/perthreadlist}
-% %\vspace{-0.1in}
-% \caption{Avoiding the traverse of per-thread freelist\label{fig:perthreadlist}}
-% %\vspace{-0.1in}
-% \end{figure}
 
-\NM{} proposes an efficient mechanism and special data structures to avoid these issues. First, each per-thread freelist maintains two pointers that point to the least recently used object (shown as the \texttt{Tail} pointer) and the $nth$ object separately (shown as $nth$ in Figure~\ref{fig:perthreadlist}), where the $n$ is a predefined number that is going to be moved. Each freelist also maintains a pointer (\texttt{Header}) pointing to the most recently used object. This structure avoids the traverse of freelist during the movement, and allows the movement of the least recently used objects (between $(n+1)th$ and $Tail$) to the per-node freelist. After the movement, the \texttt{Tail} pointer will be set to the original $nth$ object. 
+\NM{} proposes an efficient mechanism with the following data structures. First, each per-thread freelist maintains two pointers that point to the least recently used objects, shown as the \texttt{Tail} pointer and the $nth$ pointer (counted from the tail) in the upper part of  Fig.~\ref{fig:perthreadlist}. 
+This structure avoids the traverse of freelist during the movement, and allows the movement of the least recently used objects (between $(n+1)th$ and $Tail$) to the per-node freelist. After the movement, the \texttt{Tail} pointer will be set to the original $nth$ object. 
+Second, \NM{} also proposes a circular array shown in the bottom part of Fig.~\ref{fig:perthreadlist} that helps move objects from per-node (shared) freelist to per-thread freelist. 
+%As mentioned above, the per-node freelist could easily become the performance bottleneck, since multiple threads may compete for it concurrently. To address this issue, 
+Each per-node freelist actually consists of many sub-lists, where a \texttt{Head} pointer and a \texttt{Tail} pointer point to the header and the tail of each sub-list. When a thread is moving multiple objects from the per-node freelist, it could move all objects in a sub-list (pointed by a pair of \texttt{Head} and \texttt{Tail} pointer) at a time. Therefore, there is no need to traverse the whole list to obtain these objects for the movement, which could reduce the contention. 
 
-%\Maintaining the pointer to the $nth$ object requires only a forward traverse to obtain the pointer of $(n-1)th$ object, and then a thread can migrate $n$ objects (between $(n-1)th$ and the \texttt{Tail} object) easily. 
-%After the migration,  the \texttt{Tail} pointer can be set to the original $nth$ object. However, this mechanism alone cannot reduce the lock contention when multiple threads are concurrently obtaining objects.
 
-% \begin{figure}[!ht]
-% \centering
-% \includegraphics[width=3in]{figure/listarray}
-% \caption{An array of freelists for per-node heap\label{fig:listarray}}
-% %\vspace{-0.1in}
-% \end{figure}
+%Note that this array does not increase the overhead of putting objects. If a thread puts a freed object to this array, the object can be placed into the current sub-list in a constant time. Similarly, a freelist could be appended to the current sub-list in a constant time. 
 
-Second, \NM{} also proposes a circular array (``ListArray'' as Figure~\ref{fig:listarray}) that helps move objects from per-node freelist to per-thread freelist. As mentioned above, the per-node freelist could easily become the performance bottleneck, since multiple threads may compete for it concurrently. To address this issue, each per-node freelist actually consists of many sub-lists, where a \texttt{Head} pointer and a \texttt{Tail} pointer point to the header and the tail of each sub-list. When a thread is moving multiple objects from the per-node freelist, it could move all objects in a sub-list (pointed by a pair of \texttt{Head} and \texttt{Tail} pointer) at a time. Therefore, there is no need to traverse the whole list to obtain these objects for the movement, which could reduce the contention. 
-%Then whenever a thread is migrated object,
 
-%The performance overhead of three types of operations can be greatly reduced with this data structure. First, a remote thread will put a freed object into the freelist, based on the origin-based deallocation. This operation can be done in a constant time, by putting the object into the entry pointed by a \texttt{toPut} pointer. Second, a local thread maybe put multiple objects into it, which can be finished in constant time as well. All objects will be put to the entry pointed by a \texttt{toPut} pointer, and then the pointer will be updated to the next entry. Third, the operations for getting objects from it can be done efficiently by simply moving all objects in the current entry, since there is no need to traverse the freelist. Therefore, this data structure reduces the synchronization issue of all operations. 
-%\todo{introduce toPut pointer before using it}
-%In order to support the put and get operations to the freelist, this array has two pointers, \texttt{toGetIndex} and  \texttt{toPutIndex}. If a thread tries to obtain freed objects from the per-node heap, it will obtain all  objects pointed by the \texttt{toGetIndex}, and increment the index afterward. If the freelist pointed by the \texttt{toGetIndex} has no freed objects, there is no freed objects in the per-node freelist for this size class.  The put operation will utilize the pointer \texttt{toPutIndex}. There are two scenarios for the put operation. 
-%First, 
-
-Note that this array does not increase the overhead of putting objects. If a thread puts a freed object to this array, the object can be placed into the current sub-list in a constant time. Similarly, a freelist could be appended to the current sub-list in a constant time. 
-%the object will be placed into the freelist pointed by the \texttt{toPutIndex}, but the index is not updated after the deallocation. Second, when freed objects in a per-thread freelist is above the predefined watermark, the thread will migrate a batch of objects to the freelist pointed by the \texttt{toPutIndex}. After this migration, the current freelist is considered to be full, and will update the index to the next entry in the circular array.
-\subsubsection{Interleaved Heap} 
-
-%\todo{In Section III-D, the heuristic to learn private objects from shared objects of the main thread may not always work. What if all allocations happen before children threads are forked, but none are deallocated until after children threads are forked? }
-
-\NA{} proposes an interleaved heap that is inspired by existing profilers\cite{XuNuma, MemProf}: \textit{many NUMA performances issues are related to shared objects allocated in the main thread}. Due to the default first-touch policy~\cite{lameter2013numa, diener2015locality}, objects allocated and touched by the main thread are typically allocated in the node that the main thread is running on. However, these objects can be passed to multiple child threads and be accessed by these threads concurrently so that this node's memory controller becomes the performance bottleneck. 
-%causing the load imbalance issue: the memory controller of this node will be concurrently accessed by multiple threads,
-
-To overcome this issue, \NA{} reserves a range of memory for such objects, called ``Interleaved Heap'' as shown in Figure~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that physical pages of this heap will be allocated from all nodes interleavedly. With this design, when these objects are passed to child threads, these threads may access objects that are allocated from multiple nodes, reducing interconnect congestion and load imbalance of a single node. 
 
 \begin{comment}
 \begin{wrapfigure}{r}{0.6\textwidth}
@@ -156,7 +132,7 @@ To overcome this issue, \NA{} reserves a range of memory for such objects, calle
 \end{wrapfigure}
 \end{comment}
 
-In theory, private objects of the first thread should not be allocated from the interleaved heap, since that will create remote accesses unnecessarily. Initially, each allocation is treated as a shared one and is allocated from the interleaved heap. Whenever a new thread is created, the allocations are regarded as private ones. Programmers can control whether they want the interleaved support or not based on their applications.
+%In theory, private objects of the first thread should not be allocated from the interleaved heap, since that will create remote accesses unnecessarily. Initially, each allocation is treated as a shared one and is allocated from the interleaved heap. Whenever a new thread is created, the allocations are regarded as private ones. Programmers can control whether they want the interleaved support or not based on their applications.
 
 
 %\NM{} utilizes a simple heuristics to differentiate shared objects from private objects based on allocation callsites: each allocation callsite is treated as a shared one initially, and is allocated from the interleaved heap; Whenever an object is deallocated before creating children threads, indicating such an object is a private one for the main thread, all objects from the corresponding callsite are considered to be private ones, and they are only allocated from the per-node heap afterward. With this heuristics , there is no need to change programs explicitly, although it is more efficient if programmers could provide such information. 
@@ -166,9 +142,9 @@ In theory, private objects of the first thread should not be allocated from the 
 % A challenge is to obtain and compare the callsite of each allocation so that we could determine the heap based on the share-ability. In fact, this may introduce high overhead for applications with large amount of allocations, if using the \texttt{backtrace}~\cite{DBLP:conf/icse/SumnerZWZ10, DBLP:conf/cgo/ZengR0AJ014}. For the performance reason, \NA{} utilizes the sum of the stack position and the return address of the allocation invocation to identify a callsite, called ``\textit{callsite key}''. This combination is able to differentiate callsites correctly if an application does not have allocation wrappers, since the stack position can be utilized to identify the function in the stack and the return address tells the invocation placement inside the same function. If a callsite is misidentified, it will not cause any correctness issue, but with some performance penalties/losses. \NA{} utilizes a hash table to track the status of every callsite. 
  % which is fortunately not very expensive given the limited amount of different callsites. 
  
-Note that the interleaved heap cannot be achieved by using existing NUMA utilities like \texttt{numactl}. Although \texttt{numactl} could also specify memory allocations to be interleaved. However, \texttt{numactl} could only set the policy for a whole application. Instead, \NM{} only utilizes the interleaved heap for shared objects that are allocated in the main thread, not for all objects. As we evaluated in Section~\ref{sec:interleavedheap}, the interleaved heap is beneficial to the performance for most applications, but not for all applications. Therefore, it is better that the interleaved heap is enabled whenever necessary. \todo{need rewrite, currently only one application benefits a lot from this design}
+%Note that the interleaved heap cannot be achieved by using existing NUMA utilities like \texttt{numactl}. Although \texttt{numactl} could also specify memory allocations to be interleaved. However, \texttt{numactl} could only set the policy for a whole application. Instead, \NM{} only utilizes the interleaved heap for shared objects that are allocated in the main thread, not for all objects. 
 
-\todo{I remove the "Node-Local Metadata" part}
+%\todo{I remove the "Node-Local Metadata" part}
 
 %\subsubsection{Node-Local Metadata} 
 %To further reduce remote accesses, \NM{} ensures that all of the metadata is always allocated in the same node. Such metadata includes the metadata for managing per-node lists, per-thread lists, and size class information. Note that ensuring the node-local metadata for per-thread information is only possible when each thread is bound, which is the reason why \NM{} develops the ``binding-based'' approach. Therefore, \NM{} is able to guarantee that all metadata are always allocated in the same node, based on its thread binding as described in Section~\ref{sec:balance}.  
