--- a/SC2022/memorytable.tex
+++ b/SC2022/memorytable.tex
@@ -22,24 +22,24 @@ Pfscan&522&523&523&536&529&535&522&554&524\\ \hline
 raytrace&1287&1443&1429&1112&1446&1266&1288&15821&1392\\ \hline
 x264&2860&3229&2721&3417&3067&3722&2859&5445&4086\\ \hline
 \hline
-Normalized Geomean &{\bf 1}&{\bf 1.1}&{\bf 1.03}&{\bf 1.11}&{\bf 1.12}&{\bf 1.31}&{\bf 1}&{\bf 5.15}&{\bf 1.7}\\ \hline
+Normalized Geomean &{\bf 1.00}&{\bf 1.10}&{\bf 1.02}&{\bf 1.10}&{\bf 1.12}&{\bf 1.27}&{\bf 1.00}&{\bf 4.31}&{\bf 1.61}\\ \hline
 
 %\\ \hline
 \multicolumn{10}{|c|}{Small Footprint ($<$ 500MB)}\\ \hline
 Aget&8&38&4&25&10&92&9&80&6\\ \hline
-Apache&&&&&&&&&\\ \hline
+Apache&4&4&4&10&16&10&4&42&4\\ \hline
 bodytrack&34&62&42&98&43&567&35&2022&47\\ \hline
 ferret&182&299&217&301&194&668&184&3381&647\\ \hline
 fluidanimate&470&546&325&490&486&482&469&5372&474\\ \hline
-Memcached&&&&&&&&&\\ \hline
-Mysql&&&&&&&&&\\ \hline
+Memcached&17&28&18&25&52&41&19&305&32\\ \hline
+Mysql&282&418&216&308&511&853&283&&1042\\ \hline
 Sqlite3&45&95&81&110&75&143&45&685&109\\ \hline
 streamcluster&112&132&111&157&121&127&112&193&140\\ \hline
 swaptions&40&162&13&76&21&541&41&1817&14\\ \hline
 vips&225&307&287&407&264&772&225&3677&969\\ \hline \hline
-Normalized Geomean &{\bf 1}&{\bf 1.97}&{\bf 0.89}&{\bf 1.92}&{\bf 1.09}&{\bf 4.32}&{\bf 1.02}&{\bf 14.92}&{\bf 1.42}\\ \hline
+Normalized Geomean &{\bf 1.00}&{\bf 1.78}&{\bf 0.90}&{\bf 1.82}&{\bf 1.41}&{\bf 3.77}&{\bf 1.03}&{\bf 12.50}&{\bf 1.54}\\ \hline
 \hline
-Total&{\bf 13247}&{\bf 14762}&{\bf 13128}&{\bf 15012}&{\bf 14774}&{\bf 18822}&{\bf 13261}&{\bf 104801}&{\bf 24959}\cr \hline
+Total&{\bf 13550}&{\bf 15210}&{\bf 13364}&{\bf 15256}&{\bf 15353}&{\bf 19727}&{\bf 13567}&{\bf 105147}&{\bf 26038}\cr \hline
     \end{tabular}
   \caption{Memory consumption of different allocators. \\Note that \NM{}'s memory overhead is significantly reduced when THP support is disabled. \label{tab:memory_consumption}}
 \end{table*}
